force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__TotalDiscountRate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TotalDiscountRate__c</fullName>
        <description>Total discount for this line item including volume discount, contracted discount, and additional discount.</description>
        <formula>IF(SBQQ__ProratedListPrice__c == 0, 0,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &#39;Slab&#39;) &amp;&amp; NOT(SBQQ__Existing__c),
IF(SBQQ__Quantity__c == 0, 0, (SBQQ__ProratedListPrice__c * SBQQ__Quantity__c - SBQQ__CustomerPrice__c) / (SBQQ__Quantity__c * SBQQ__ProratedListPrice__c)),
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &#39;Slab&#39;) &amp;&amp; SBQQ__Existing__c,
IF(SBQQ__Quantity__c == SBQQ__PriorQuantity__c, 0, (SBQQ__ProratedListPrice__c * (SBQQ__Quantity__c-SBQQ__PriorQuantity__c) - SBQQ__CustomerPrice__c) / ((SBQQ__Quantity__c-SBQQ__PriorQuantity__c) * SBQQ__ProratedListPrice__c)),
(SBQQ__ProratedListPrice__c - SBQQ__CustomerPrice__c) / SBQQ__ProratedListPrice__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total discount for this line item including volume discount, contracted discount, and additional discount.</inlineHelpText>
        <label>Total Discount (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </CustomField>