force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__UpgradedAsset__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UpgradedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being upgraded by this quote line. Only populated if this quote line represents an upgrade.</description>
        <inlineHelpText>Asset being upgraded by this quote line. When the quote is contracted this asset will have its Usage End Date populated to indicate it&#39;s retired.</inlineHelpText>
        <label>Upgraded Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeLines</relationshipName>
        <type>Lookup</type>
    </CustomField>