force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__UpgradedQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UpgradedQuantity__c</fullName>
        <description>Quantity being upgraded.</description>
        <inlineHelpText>Portion of this line&#39;s Prior Quantity being upgraded to another product.</inlineHelpText>
        <label>Upgraded Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>