force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Set_DRR_Fields__c.field-meta.xml
<CustomField>
        <fullName>Set_DRR_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFSL-1161</description>
        <label>Set DRR Fields</label>
        <type>Checkbox</type>
    </CustomField>