force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Start_Date__c</fullName>
        <description>Use for twin field mapping to Asset Start Date</description>
        <formula>SBQQ__EffectiveStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>