force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount__c</fullName>
        <description>SFSL-868</description>
        <formula>SBQQ__TotalDiscountRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </CustomField>