force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Discount_Per_Volume__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount_Per_Volume__c</fullName>
        <label>Total Discount Per Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>