force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unit_of_measure__c.field-meta.xml
<CustomField>
        <fullName>Unit_of_measure__c</fullName>
        <description>Used for generating Quote Offer and License Orders</description>
        <label>Unit of measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each/User per year</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Hours/One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>