force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/NFR_Opportunity.validationRule-meta.xml
<ValidationRule>
        <fullName>NFR_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>text(SBQQ__Quote__r.SBQQ__Opportunity2__r.Deal_Type__c) = &quot;NFR&quot; &amp;&amp; 
SBQQ__ProductCode__c &lt;&gt; &quot;UIPNPOSNFR0&quot; &amp;&amp;
SBQQ__ProductCode__c &lt;&gt; &quot;UIPNPSNUNFR&quot; &amp;&amp;
SBQQ__ProductCode__c &lt;&gt; &quot;UIPNPARCUNF&quot; &amp;&amp;
SBQQ__ProductCode__c &lt;&gt; &quot;UIPNPSCUNFR&quot; &amp;&amp;
SBQQ__ProductCode__c &lt;&gt; &quot;UIPNPURNFR0&quot; &amp;&amp;
SBQQ__ProductCode__c &lt;&gt; &quot;UIPNPURNFR0&quot; &amp;&amp;
SBQQ__ProductCode__c &lt;&gt; &quot;UIPNPARNUNF&quot; &amp;&amp;
SBQQ__ProductCode__c &lt;&gt; &quot;UIPRPANFR0&quot;</errorConditionFormula>
        <errorMessage>Only NFR products can be added on this type of opportunity.</errorMessage>
    </ValidationRule>