force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/SBQQ__RecurringChargeTypeMustHaveBillingType.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &#39;Recurring&#39;), ISPICKVAL(SBQQ__BillingType__c, &#39;&#39;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </ValidationRule>